--- a/courses/templates/registration/logged_out.html
+++ b/courses/templates/registration/logged_out.html
@@ -1,11 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Logged out{% endblock %}
 {% block content %}
-  <h1>Logged out</h1>
-  <div class="module">
-    <p>
-      You have been successfully logged out.
-      You can <a href="{% url "login" %}">log-in again</a>.
-    </p>
-  </div>
+  <h2>You've been logged out.</h2>
+  <a href="{% url 'login' %}">Log in again</a>
 {% endblock %}
